--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
 .header {
   display: grid;
-  grid-template-columns: 51px 188px 902px 742px 31px;
+  grid-template-columns: 51px 188px auto 742px 31px;
   position: fixed;
   background-color: yellow;
   height: 120px;
@@ -36,6 +36,9 @@
   text-decoration: none;
   color: #353534;
 }
+.header__nav__list__element:hover {
+  font-weight: 800;
+}
 .header__nav__button {
   width: 180px;
   height: 50px;
@@ -47,7 +50,15 @@
   letter-spacing: 0;
   border: none;
 }
-
-.solution {
+.header__nav__button:hover {
   font-weight: 800;
+}
+
+@media (min-width: 1600px) {
+  .header {
+    grid-template-columns: 51px 188px 902px 742px 31px;
+  }
+}
+.bcgimage {
+  margin-top: 120px;
 }/*# sourceMappingURL=style.css.map */
