Creating texts and image on top bcg image

--- a/_variables.scss
+++ b/_variables.scss
@@ -3,11 +3,13 @@
 $monte: 'Montserrat', sans-serif;
 
 $medium: 500;
+$bold: 600;
 $extrabold: 800;
 
 
 //colors
 
+$yelloworange: #FFF300;
 $blacklight: #353534;
 $red: #E92F03;
 $white: #FFFFFF;
