--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 51px 188px auto 742px 31px;
   position: fixed;
-  background-color: yellow;
+  background-color: #FFF300;
   height: 120px;
   top: 0;
   left: 0;
@@ -49,6 +49,7 @@
   font-size: 15px;
   letter-spacing: 0;
   border: none;
+  cursor: pointer;
 }
 .header__nav__button:hover {
   font-weight: 800;
@@ -59,6 +60,39 @@
     grid-template-columns: 51px 188px 902px 742px 31px;
   }
 }
+.top_section {
+  display: flex;
+  flex-direction: column;
+}
+
 .bcgimage {
-  margin-top: 120px;
+  background-image: url("/images/abstract.jpg");
+  width: 100vw;
+  height: 100vh;
+}
+.bcgimage__content {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 313px 760px 360px auto 290px;
+  grid-template-rows: 290px auto 170px;
+}
+.bcgimage__content__top_text {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  font-family: "Montserrat", sans-serif;
+  width: 600;
+  font-size: 60px;
+  letter-spacing: -1px;
+}
+.bcgimage__content__ground_text {
+  grid-column-start: 2;
+  grid-row-start: 3;
+  place-self: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+.bcgimage__content__image {
+  grid-column-start: 4;
+  grid-row-start: 2;
 }/*# sourceMappingURL=style.css.map */
