--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@
    display: grid;
    grid-template-columns: 51px 188px auto 742px 31px;
    position: fixed;
-   background-color: yellow;
+   background-color: $yelloworange;
    height: 120px;
    top: 0;
    left: 0;
@@ -57,6 +57,7 @@
       font-size: 15px;
       letter-spacing: 0;
       border: none;
+      cursor: pointer;
 
       &:hover {
          font-weight: $extrabold;
@@ -73,11 +74,55 @@
    }
 }
 
+.top_section {
+   display: flex;
+   flex-direction: column;
+}
+
+
+
+
+
 
 .bcgimage {
-   margin-top: 120px;
-   // background-image: url("vector.jpg")
+   background-image: url("/images/abstract.jpg");
+   width: 100vw;
+   height: 100vh;
+
+   &__content {
+      display: grid;
+      width: 100%;
+      height: 100%;
+      grid-template-columns: 313px 760px 360px auto 290px;
+      grid-template-rows: 290px auto 170px;
+      // background-color: gray;
+
+      &__top_text {
+         grid-column-start: 2;
+         grid-row-start: 2;
+         font-family: $monte;
+         width: $bold;
+         font-size: 60px;
+         letter-spacing: -1px;
+      }
+
+      &__ground_text {
+         grid-column-start: 2;
+         grid-row-start: 3;
+         place-self: center;
+         font-family: $monte;
+         font-size: 14px;
+         
+      }
+
+      &__image {
+         grid-column-start: 4;
+         grid-row-start: 2;
+
+      }
+   }
 }
+
 
 
 
