--- a/style.css
+++ b/style.css
@@ -65,34 +65,100 @@
   flex-direction: column;
 }
 
+.section_image {
+  width: 100vw;
+}
+
 .bcgimage {
   background-image: url("/images/abstract.jpg");
   width: 100vw;
   height: 100vh;
+  background-size: cover;
 }
 .bcgimage__content {
   display: grid;
   width: 100%;
   height: 100%;
-  grid-template-columns: 313px 760px 360px auto 290px;
-  grid-template-rows: 290px auto 170px;
+  grid-template-columns: 313px 760px 360px 220px auto;
+  grid-template-rows: 290px 220px 170px;
 }
 .bcgimage__content__top_text {
   grid-column-start: 2;
   grid-row-start: 2;
+  height: 137px;
+  width: 754px;
   font-family: "Montserrat", sans-serif;
-  width: 600;
+  font-weight: 600;
   font-size: 60px;
   letter-spacing: -1px;
+  margin-top: 50px;
 }
 .bcgimage__content__ground_text {
   grid-column-start: 2;
   grid-row-start: 3;
   place-self: center;
+  margin-top: 130px;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
 }
 .bcgimage__content__image {
   grid-column-start: 4;
   grid-row-start: 2;
+}
+
+.main_container {
+  width: 1130px;
+  margin: 0 auto;
+}
+.main_container__first_section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 60px auto 30px 30px 50px;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  height: 200px;
+  background-color: #F2F2F2;
+}
+.main_container__first_section__employees {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+.main_container__first_section__employees_num {
+  grid-column-start: 2;
+  grid-row-start: 4;
+  font-family: "Montserrat", sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+}
+.main_container__first_section__year_of_establishment {
+  grid-column-start: 6;
+  grid-row-start: 2;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+.main_container__first_section__2017 {
+  grid-column-start: 6;
+  grid-row-start: 4;
+  font-family: "Montserrat", sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+}
+.main_container__first_section__industry {
+  grid-column-start: 9;
+  grid-row-start: 2;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+.main_container__first_section__it {
+  grid-column-start: 9;
+  grid-column-end: span 11;
+  grid-row-start: 4;
+  font-family: "Montserrat", sans-serif;
+  font-size: 32px;
+  font-weight: 600;
 }/*# sourceMappingURL=style.css.map */
