--- a/style.scss
+++ b/style.scss
@@ -81,35 +81,41 @@
 
 
 
-
+.section_image {
+   width: 100vw;
+}
 
 
 .bcgimage {
    background-image: url("/images/abstract.jpg");
    width: 100vw;
    height: 100vh;
+   background-size: cover;
 
    &__content {
       display: grid;
       width: 100%;
       height: 100%;
-      grid-template-columns: 313px 760px 360px auto 290px;
-      grid-template-rows: 290px auto 170px;
-      // background-color: gray;
+      grid-template-columns: 313px 760px 360px 220px auto;
+      grid-template-rows: 290px 220px 170px;
 
       &__top_text {
          grid-column-start: 2;
          grid-row-start: 2;
+         height: 137px;
+         width: 754px;
          font-family: $monte;
-         width: $bold;
+         font-weight: $bold;
          font-size: 60px;
          letter-spacing: -1px;
+         margin-top: 50px;
       }
 
       &__ground_text {
          grid-column-start: 2;
          grid-row-start: 3;
          place-self: center;
+         margin-top: 130px;
          font-family: $monte;
          font-size: 14px;
          
@@ -123,7 +129,77 @@
    }
 }
 
+// main
 
+.main_container {
+   width: 1130px;
+   margin: 0 auto;
+
+   &__first_section {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: 60px auto 30px 30px 50px;
+      column-gap: 8px;
+      height: 200px;
+      background-color: $gray;
+
+      &__employees {
+         grid-column-start: 2;
+         grid-row-start: 2;
+         font-family: $monte;
+         font-size: 14px;
+         font-weight: $medium;
+
+      }
+
+      &__employees_num {
+         grid-column-start: 2;
+         grid-row-start: 4;
+         font-family: $monte;
+         font-size: 32px;
+         font-weight: $bold;
+
+      }
+
+      &__year_of_establishment {
+         grid-column-start: 6;
+         grid-row-start: 2;
+         font-family: $monte;
+         font-size: 14px;
+         font-weight: $medium;
+
+      }
+
+      &__2017 {
+         grid-column-start: 6;
+         grid-row-start: 4;
+         font-family: $monte;
+         font-size: 32px;
+         font-weight: $bold;
+
+      }
+
+      &__industry {
+         grid-column-start: 9;
+         // grid-row-start: 1;
+         grid-row-start: 2;
+         font-family: $monte;
+         font-size: 14px;
+         font-weight: $medium;
+
+      }
+
+      &__it {
+         grid-column-start: 9;
+         grid-column-end: span 11;
+         grid-row-start: 4;
+         font-family: $monte;
+         font-size: 32px;
+         font-weight: $bold;
+
+      }
+   }
+}
 
 
 
