--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
   width: 100%;
   height: 100%;
   grid-template-columns: 313px 760px 360px 220px auto;
-  grid-template-rows: 290px 220px 170px;
+  grid-template-rows: 290px 137px 170px 14px 60px;
 }
 .bcgimage__content__top_text {
   grid-column-start: 2;
@@ -91,19 +91,18 @@
   font-weight: 600;
   font-size: 60px;
   letter-spacing: -1px;
-  margin-top: 50px;
 }
 .bcgimage__content__ground_text {
   grid-column-start: 2;
-  grid-row-start: 3;
+  grid-row-start: 4;
   place-self: center;
-  margin-top: 130px;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
 }
 .bcgimage__content__image {
   grid-column-start: 4;
   grid-row-start: 2;
+  margin-top: -50px;
 }
 
 .main_container {
@@ -161,4 +160,7 @@
   font-family: "Montserrat", sans-serif;
   font-size: 32px;
   font-weight: 600;
+}
+.main_container__second_section {
+  height: 712px;
 }/*# sourceMappingURL=style.css.map */
