--- a/style.scss
+++ b/style.scss
@@ -97,7 +97,7 @@
       width: 100%;
       height: 100%;
       grid-template-columns: 313px 760px 360px 220px auto;
-      grid-template-rows: 290px 220px 170px;
+      grid-template-rows: 290px 137px 170px 14px 60px;
 
       &__top_text {
          grid-column-start: 2;
@@ -108,14 +108,14 @@
          font-weight: $bold;
          font-size: 60px;
          letter-spacing: -1px;
-         margin-top: 50px;
+         // margin-top: 50px;
       }
 
       &__ground_text {
          grid-column-start: 2;
-         grid-row-start: 3;
+         grid-row-start: 4;
          place-self: center;
-         margin-top: 130px;
+         // // margin-top: 130px;
          font-family: $monte;
          font-size: 14px;
          
@@ -124,6 +124,7 @@
       &__image {
          grid-column-start: 4;
          grid-row-start: 2;
+         margin-top: -50px;
 
       }
    }
@@ -198,6 +199,11 @@
          font-weight: $bold;
 
       }
+   }
+
+   &__second_section {
+      height: 712px;
+
    }
 }
 
