--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 .header {
   display: grid;
   grid-template-columns: 51px 188px auto 742px 31px;
@@ -163,4 +164,41 @@
 }
 .main_container__second_section {
   height: 712px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 150px 15px 60px 40px 90px 14px 30px 80px 220px;
+  grid-column-gap: 8px;
+}
+.main_container__second_section__services {
+  grid-column-start: 3;
+  grid-column-end: span 4;
+  grid-row-start: 2;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14x;
+  font-weight: 500;
+  letter-spacing: 0;
+}
+.main_container__second_section__tech_house {
+  grid-column-start: 3;
+  grid-column-end: span 9;
+  grid-row-start: 4;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  letter-spacing: 0;
+}
+.main_container__second_section__technology {
+  grid-column-start: 3;
+  grid-column-end: span 4;
+  grid-row-start: 6;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14x;
+  font-weight: 500;
+  letter-spacing: 0;
+}
+.main_container__second_section__logos {
+  grid-column-start: 3;
+  grid-column-end: span 8;
+  grid-row-start: 8;
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
