--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 @import 'variables';
 
@@ -143,6 +144,7 @@
       column-gap: 8px;
       height: 200px;
       background-color: $gray;
+      // margin-top: -15px;
 
       &__employees {
          grid-column-start: 2;
@@ -203,7 +205,49 @@
 
    &__second_section {
       height: 712px;
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: 150px 15px 60px 40px 90px 14px 30px 80px 220px;
+      grid-column-gap: 8px;
 
+      &__services {
+         grid-column-start: 3;
+         grid-column-end: span 4;
+         grid-row-start: 2;
+         font-family: $monte;
+         font-size: 14x;
+         font-weight: $medium;
+         letter-spacing: 0;
+      }
+      
+
+      &__tech_house {
+         grid-column-start: 3;
+         grid-column-end: span 9;
+         grid-row-start: 4;
+         font-family: $roboto;
+         font-size: 15px;
+         letter-spacing: 0;
+      }
+
+      &__technology {
+         grid-column-start: 3;
+         grid-column-end: span 4;
+         grid-row-start: 6;
+         font-family: $monte;
+         font-size: 14x;
+         font-weight: $medium;
+         letter-spacing: 0;
+      }
+
+      &__logos {
+         grid-column-start: 3;
+         grid-column-end: span 8;
+         grid-row-start: 8;
+         display: flex;
+         justify-content: space-between;
+      }
+      
    }
 }
 
