--- a/style.scss
+++ b/style.scss
@@ -249,6 +249,30 @@
       }
       
    }
+
+   &__lorem_section {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: 8px;
+
+
+      &__container {
+        width: 470px;
+        height: 470px;
+        grid-column-start: 1;
+        grid-column-end: span 5;
+
+        &__ceo {
+         height: 420px;
+         width: 370px;
+         background-color: $gray;
+         margin-top: 10px;
+         margin-left: 30px;
+
+
+        }
+      }
+   }
 }
 
 
