--- a/style.scss
+++ b/style.scss
@@ -1,284 +1,267 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-@import 'variables';
+@import "variables";
 
-
+body {
+  font-family: $monte;
+  font-size: 15px;
+  line-height: 1.3;
+}
 
 .header {
-   display: grid;
-   grid-template-columns: 51px 188px auto 742px 31px;
-   position: fixed;
-   background-color: $yelloworange;
-   height: 120px;
-   top: 0;
-   left: 0;
-   right: 0;
+  display: grid;
+  position: fixed;
+	z-index: 100;
+	padding: 25px 0;
+  grid-template-columns: 51px 188px auto 742px 31px;
+  background: url("/images/abstract.jpg") no-repeat;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  right: 0;
+
+	&__img {
+		grid-column-start: 2;
+		align-self: center;
+	}
+	
+	.navigation {
+		display: flex;
+		grid-column-start: 4;
+		justify-content: space-between;
+		align-items: center;
+	
+		&__list {
+			grid-column-start: 1;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 518px;
+			text-decoration: none;
+	
+			&__element {
+				font-family: $monte;
+				font-weight: $medium;
+				font-size: 15px;
+				text-decoration: none;
+				color: $blacklight;
+	
+				&:hover {
+					font-weight: $extrabold;
+				}
+			}
+		}
+	
+		&__button {
+			width: 180px;
+			height: 50px;
+			background-color: $red;
+			color: $white;
+			font-family: $monte;
+			font-weight: 200;
+			font-size: 15px;
+			letter-spacing: 0;
+			border: none;
+			cursor: pointer;
+	
+			&:hover {
+				font-weight: $extrabold;
+			}
+		}
+	}
 }
-  
-.header__img {
-   grid-column-start: 2;
-   align-self: center;
-}
-
-.header__nav {
-   display: flex;
-   grid-column-start: 4;
-   justify-content: space-between;
-   align-items: center;
-
-   &__list {
-      grid-column-start: 1;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   width: 518px;
-   text-decoration: none;
-
-   &__element {
-      font-family: $monte;
-      font-weight: $medium;
-      font-size: 15px;
-      text-decoration: none;
-      color: $blacklight;
-
-      &:hover {
-         font-weight: $extrabold;
-      }
-   }
-   }
-
-   &__button {
-      width: 180px;
-      height: 50px;
-      background-color: $red;
-      color: $white;
-      font-family: $monte;
-      font-weight: 200;
-      font-size: 15px;
-      letter-spacing: 0;
-      border: none;
-      cursor: pointer;
-
-      &:hover {
-         font-weight: $extrabold;
-      }
-   
-   }
-}
 
 
-@media (min-width: $layout-breakpoint) {
-   .header {
-      grid-template-columns: 51px 188px 902px 742px 31px;
-      
-   }
+// @media (min-width: $layout-breakpoint) {
+//   .header {
+//     // grid-template-columns: 51px 188px 902px 742px 31px;
+//   }
+// }
+
+.section-container {
+  max-width: 1130px;
+  margin: 0 auto;
+	margin-bottom: 50px;
 }
 
 .top_section {
-   display: flex;
-   flex-direction: column;
-}
+  display: flex;
+  flex-direction: column;
 
-
-
-.section_image {
-   width: 100vw;
-}
-
-
-.bcgimage {
-   background-image: url("/images/abstract.jpg");
-   width: 100vw;
-   height: 100vh;
-   background-size: cover;
-
-   &__content {
-      display: grid;
-      width: 100%;
-      height: 100%;
-      grid-template-columns: 313px 760px 360px 220px auto;
-      grid-template-rows: 290px 137px 170px 14px 60px;
-
-      &__top_text {
-         grid-column-start: 2;
-         grid-row-start: 2;
-         height: 137px;
-         width: 754px;
-         font-family: $monte;
-         font-weight: $bold;
-         font-size: 60px;
-         letter-spacing: -1px;
-         // margin-top: 50px;
-      }
-
-      &__ground_text {
-         grid-column-start: 2;
-         grid-row-start: 4;
-         place-self: center;
-         // // margin-top: 130px;
-         font-family: $monte;
-         font-size: 14px;
-         
-      }
-
-      &__image {
-         grid-column-start: 4;
-         grid-row-start: 2;
-         margin-top: -50px;
-
-      }
-   }
+	.bcgimage {
+		background: url("/images/abstract.jpg") no-repeat;
+		background-size: cover;
+	
+		&__content {
+			display: grid;
+			//width: 100%;
+			padding: 0 15px;
+			height: 100%;
+			grid-template-columns: auto 760px auto 220px auto;
+			grid-template-rows: 290px 137px 170px 14px 60px;
+	
+			&__top_text {
+				grid-column-start: 2;
+				grid-row-start: 2;
+				height: 137px;
+				width: 754px;
+				font-family: $monte;
+				font-weight: $bold;
+				font-size: 60px;
+				letter-spacing: -1px;
+				// margin-top: 50px;
+			}
+	
+			&__ground_text {
+				grid-column-start: 2;
+				grid-row-start: 4;
+				place-self: center;
+				// // margin-top: 130px;
+				font-family: $monte;
+				font-size: 14px;
+			}
+	
+			&__image {
+				grid-column-start: 4;
+				grid-row-start: 2;
+				margin-top: -50px;
+			}
+		}
+	}
 }
 
 // main
 
 .main_container {
-   width: 1130px;
-   margin: 0 auto;
-
-   &__first_section {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: 60px auto 30px 30px 50px;
-      column-gap: 8px;
-      height: 200px;
-      background-color: $gray;
-      // margin-top: -15px;
-
-      &__employees {
-         grid-column-start: 2;
-         grid-row-start: 2;
-         font-family: $monte;
-         font-size: 14px;
-         font-weight: $medium;
-
-      }
-
-      &__employees_num {
-         grid-column-start: 2;
-         grid-row-start: 4;
-         font-family: $monte;
-         font-size: 32px;
-         font-weight: $bold;
-
-      }
-
-      &__year_of_establishment {
-         grid-column-start: 6;
-         grid-row-start: 2;
-         font-family: $monte;
-         font-size: 14px;
-         font-weight: $medium;
-
-      }
-
-      &__2017 {
-         grid-column-start: 6;
-         grid-row-start: 4;
-         font-family: $monte;
-         font-size: 32px;
-         font-weight: $bold;
-
-      }
-
-      &__industry {
-         grid-column-start: 9;
-         // grid-row-start: 1;
-         grid-row-start: 2;
-         font-family: $monte;
-         font-size: 14px;
-         font-weight: $medium;
-
-      }
-
-      &__it {
-         grid-column-start: 9;
-         grid-column-end: span 11;
-         grid-row-start: 4;
-         font-family: $monte;
-         font-size: 32px;
-         font-weight: $bold;
-
-      }
-   }
-
-   &__second_section {
-      height: 712px;
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: 150px 15px 60px 40px 90px 14px 30px 80px 220px;
-      grid-column-gap: 8px;
-
-      &__services {
-         grid-column-start: 3;
-         grid-column-end: span 4;
-         grid-row-start: 2;
-         font-family: $monte;
-         font-size: 14x;
-         font-weight: $medium;
-         letter-spacing: 0;
-      }
-      
-
-      &__tech_house {
-         grid-column-start: 3;
-         grid-column-end: span 9;
-         grid-row-start: 4;
-         font-family: $roboto;
-         font-size: 15px;
-         letter-spacing: 0;
-      }
-
-      &__technology {
-         grid-column-start: 3;
-         grid-column-end: span 4;
-         grid-row-start: 6;
-         font-family: $monte;
-         font-size: 14x;
-         font-weight: $medium;
-         letter-spacing: 0;
-      }
-
-      &__logos {
-         grid-column-start: 3;
-         grid-column-end: span 8;
-         grid-row-start: 8;
-         display: flex;
-         justify-content: space-between;
-      }
-      
-   }
-
-   &__lorem_section {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-column-gap: 8px;
-
-
-      &__container {
-        width: 470px;
-        height: 470px;
-        grid-column-start: 1;
-        grid-column-end: span 5;
-
-        &__ceo {
-         height: 420px;
-         width: 370px;
-         background-color: $gray;
-         margin-top: 10px;
-         margin-left: 30px;
-
-
-        }
-      }
-   }
+  width: 100%;
 }
 
+.first_section {
+  display: grid;
+	position: relative;
+  background-color: $gray;
+  margin-top: -15px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 60px auto 30px 30px 50px;
+  column-gap: 8px;
 
+  &__employees {
+    grid-column-start: 2;
+    grid-row-start: 2;
+    font-family: $monte;
+    font-size: 14px;
+    font-weight: $medium;
+  }
 
-      
+  &__employees_num {
+    grid-column-start: 2;
+    grid-row-start: 4;
+    font-family: $monte;
+    font-size: 32px;
+    font-weight: $bold;
+  }
 
+  &__year_of_establishment {
+    grid-column-start: 6;
+    grid-row-start: 2;
+    font-family: $monte;
+    font-size: 14px;
+    font-weight: $medium;
+  }
 
+  &__2017 {
+    grid-column-start: 6;
+    grid-row-start: 4;
+    font-family: $monte;
+    font-size: 32px;
+    font-weight: $bold;
+  }
 
+  &__industry {
+    grid-column-start: 9;
+    grid-row-start: 2;
+    font-family: $monte;
+    font-size: 14px;
+    font-weight: $medium;
+  }
 
+  &__it {
+    grid-column-start: 9;
+    grid-column-end: 12;
+    grid-row-start: 4;
+    font-family: $monte;
+    font-size: 32px;
+    font-weight: $bold;
+  }
+}
+
+.second_section {
+  display: grid;
+  padding: 100px 0 60px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+
+  &__services {
+    grid-column-start: 3;
+    grid-column-end: 9;
+		margin-bottom: 50px;
+    font-size: 14px;
+    font-weight: $medium;
+  }
+
+  &__tech_house {
+    grid-column-start: 3;
+    grid-column-end: 9;
+    font-family: $roboto;
+		margin-bottom: 90px;
+  }
+
+  &__technology {
+    grid-column-start: 3;
+    grid-column-end: 9;
+    font-weight: $medium;
+		margin-bottom: 30px;
+  }
+
+  &__logos {
+    display: flex;
+    justify-content: space-between;
+		align-items: center;
+		padding: 10px 0;
+    grid-column-start: 3;
+    grid-column-end: 11;
+  }
+}
+
+.lorem_section {
+	padding: 50px 0;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-column-gap: 8px;
+
+	.image_container {
+		grid-column-start: 1;
+		grid-column-end: 5;
+
+		&__ceo {
+			width: 370px;
+			height: 420px;
+		}
+	}
+
+	.text_container {
+    grid-column-start: 6;
+    grid-column-end: 12;
+
+		&__quote {
+			display: block;
+			margin-bottom: 60px;
+		}
+	}
+}
+
+.footer {
+	background-color: #323232;
+	padding: 50px 0;
+}
