Adding few more sections in main

--- a/_variables.scss
+++ b/_variables.scss
@@ -3,6 +3,7 @@
 $monte: 'Montserrat', sans-serif;
 $roboto: 'Roboto',sans-serif;
 
+
 $medium: 500;
 $bold: 600;
 $extrabold: 800;
@@ -12,6 +13,7 @@ $extrabold: 800;
 
 $yelloworange: #FFF300;
 $blacklight: #353534;
+$blacksecond: #323232;
 $red: #E92F03;
 $white: #FFFFFF;
 $gray: #F2F2F2;
