--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 8px;
+  margin-bottom: 50px;
 }
 .lorem_section .image_container {
   grid-column-start: 1;
@@ -218,7 +219,79 @@ body {
 }
 .lorem_section .text_container__quote {
   display: block;
+  font-family: "Roboto", sans-serif;
+  color: #323232;
+  font-size: 28px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 36px;
   margin-bottom: 60px;
+}
+.lorem_section .text_container .sign_container {
+  display: flex;
+}
+.lorem_section .text_container .sign_container__text {
+  color: #323232;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 28px;
+}
+.lorem_section .text_container .sign_container__sign {
+  height: 44px;
+  width: 53px;
+  color: #E92F03;
+  font-family: Roboto;
+  font-size: 180px;
+  transform: rotate(180deg) translateX(-45px) translateY(-45px);
+}
+
+.stage1_section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+  padding: 100px 0 180px;
+}
+.stage1_section__stage1 {
+  grid-column-start: 3;
+  margin-bottom: 50px;
+}
+.stage1_section__longtext {
+  grid-column-start: 3;
+  grid-column-end: 11;
+  margin-bottom: 60px;
+}
+.stage1_section__bialystok {
+  grid-column-start: 3;
+  grid-column-end: 11;
+}
+
+.section-container__image {
+  width: 100%;
+}
+
+.twofotos__container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+  width: 100%;
+  margin-bottom: 80px;
+}
+.twofotos__container__mozaika {
+  height: 442px;
+  width: 650px;
+  grid-column-start: 1;
+  grid-column-end: 8;
+}
+.twofotos__container__layer {
+  height: 442px;
+  width: 466px;
+  grid-column-start: 8;
+  grid-column-end: 12;
+}
+
+.section__container__paralax {
+  width: 100%;
 }
 
 .footer {
