--- a/style.scss
+++ b/style.scss
@@ -12,8 +12,8 @@ body {
 .header {
   display: grid;
   position: fixed;
-	z-index: 100;
-	padding: 25px 0;
+  z-index: 100;
+  padding: 25px 0;
   grid-template-columns: 51px 188px auto 742px 31px;
   background: url("/images/abstract.jpg") no-repeat;
   background-size: cover;
@@ -21,57 +21,56 @@ body {
   left: 0;
   right: 0;
 
-	&__img {
-		grid-column-start: 2;
-		align-self: center;
-	}
-	
-	.navigation {
-		display: flex;
-		grid-column-start: 4;
-		justify-content: space-between;
-		align-items: center;
-	
-		&__list {
-			grid-column-start: 1;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			width: 518px;
-			text-decoration: none;
-	
-			&__element {
-				font-family: $monte;
-				font-weight: $medium;
-				font-size: 15px;
-				text-decoration: none;
-				color: $blacklight;
-	
-				&:hover {
-					font-weight: $extrabold;
-				}
-			}
-		}
-	
-		&__button {
-			width: 180px;
-			height: 50px;
-			background-color: $red;
-			color: $white;
-			font-family: $monte;
-			font-weight: 200;
-			font-size: 15px;
-			letter-spacing: 0;
-			border: none;
-			cursor: pointer;
-	
-			&:hover {
-				font-weight: $extrabold;
-			}
-		}
-	}
-}
+  &__img {
+    grid-column-start: 2;
+    align-self: center;
+  }
 
+  .navigation {
+    display: flex;
+    grid-column-start: 4;
+    justify-content: space-between;
+    align-items: center;
+
+    &__list {
+      grid-column-start: 1;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 518px;
+      text-decoration: none;
+
+      &__element {
+        font-family: $monte;
+        font-weight: $medium;
+        font-size: 15px;
+        text-decoration: none;
+        color: $blacklight;
+
+        &:hover {
+          font-weight: $extrabold;
+        }
+      }
+    }
+
+    &__button {
+      width: 180px;
+      height: 50px;
+      background-color: $red;
+      color: $white;
+      font-family: $monte;
+      font-weight: 200;
+      font-size: 15px;
+      letter-spacing: 0;
+      border: none;
+      cursor: pointer;
+
+      &:hover {
+        font-weight: $extrabold;
+      }
+    }
+  }
+}
 
 // @media (min-width: $layout-breakpoint) {
 //   .header {
@@ -82,53 +81,53 @@ body {
 .section-container {
   max-width: 1130px;
   margin: 0 auto;
-	margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .top_section {
   display: flex;
   flex-direction: column;
 
-	.bcgimage {
-		background: url("/images/abstract.jpg") no-repeat;
-		background-size: cover;
-	
-		&__content {
-			display: grid;
-			//width: 100%;
-			padding: 0 15px;
-			height: 100%;
-			grid-template-columns: auto 760px auto 220px auto;
-			grid-template-rows: 290px 137px 170px 14px 60px;
-	
-			&__top_text {
-				grid-column-start: 2;
-				grid-row-start: 2;
-				height: 137px;
-				width: 754px;
-				font-family: $monte;
-				font-weight: $bold;
-				font-size: 60px;
-				letter-spacing: -1px;
-				// margin-top: 50px;
-			}
-	
-			&__ground_text {
-				grid-column-start: 2;
-				grid-row-start: 4;
-				place-self: center;
-				// // margin-top: 130px;
-				font-family: $monte;
-				font-size: 14px;
-			}
-	
-			&__image {
-				grid-column-start: 4;
-				grid-row-start: 2;
-				margin-top: -50px;
-			}
-		}
-	}
+  .bcgimage {
+    background: url("/images/abstract.jpg") no-repeat;
+    background-size: cover;
+
+    &__content {
+      display: grid;
+      //width: 100%;
+      padding: 0 15px;
+      height: 100%;
+      grid-template-columns: auto 760px auto 220px auto;
+      grid-template-rows: 290px 137px 170px 14px 60px;
+
+      &__top_text {
+        grid-column-start: 2;
+        grid-row-start: 2;
+        height: 137px;
+        width: 754px;
+        font-family: $monte;
+        font-weight: $bold;
+        font-size: 60px;
+        letter-spacing: -1px;
+        // margin-top: 50px;
+      }
+
+      &__ground_text {
+        grid-column-start: 2;
+        grid-row-start: 4;
+        place-self: center;
+        // // margin-top: 130px;
+        font-family: $monte;
+        font-size: 14px;
+      }
+
+      &__image {
+        grid-column-start: 4;
+        grid-row-start: 2;
+        margin-top: -50px;
+      }
+    }
+  }
 }
 
 // main
@@ -139,7 +138,7 @@ body {
 
 .first_section {
   display: grid;
-	position: relative;
+  position: relative;
   background-color: $gray;
   margin-top: -15px;
   grid-template-columns: repeat(12, 1fr);
@@ -205,7 +204,7 @@ body {
   &__services {
     grid-column-start: 3;
     grid-column-end: 9;
-		margin-bottom: 50px;
+    margin-bottom: 50px;
     font-size: 14px;
     font-weight: $medium;
   }
@@ -214,54 +213,135 @@ body {
     grid-column-start: 3;
     grid-column-end: 9;
     font-family: $roboto;
-		margin-bottom: 90px;
+    margin-bottom: 90px;
   }
 
   &__technology {
     grid-column-start: 3;
     grid-column-end: 9;
     font-weight: $medium;
-		margin-bottom: 30px;
+    margin-bottom: 30px;
   }
 
   &__logos {
     display: flex;
     justify-content: space-between;
-		align-items: center;
-		padding: 10px 0;
+    align-items: center;
+    padding: 10px 0;
     grid-column-start: 3;
     grid-column-end: 11;
   }
 }
 
 .lorem_section {
-	padding: 50px 0;
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-column-gap: 8px;
+  padding: 50px 0;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+  margin-bottom: 50px;
 
-	.image_container {
-		grid-column-start: 1;
-		grid-column-end: 5;
+  .image_container {
+    grid-column-start: 1;
+    grid-column-end: 5;
 
-		&__ceo {
-			width: 370px;
-			height: 420px;
-		}
-	}
+    &__ceo {
+      width: 370px;
+      height: 420px;
+    }
+  }
 
-	.text_container {
+  .text_container {
     grid-column-start: 6;
     grid-column-end: 12;
 
-		&__quote {
-			display: block;
-			margin-bottom: 60px;
-		}
-	}
+    &__quote {
+      display: block;
+      font-family: $roboto;
+      color: $blacksecond;
+      font-size: 28px;
+      font-style: italic;
+      font-weight: 300;
+      line-height: 36px;
+      margin-bottom: 60px;
+    }
+
+    .sign_container {
+      display: flex;
+
+      &__text {
+        color: $blacksecond;
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: bold;
+        line-height: 28px;
+      }
+
+      &__sign {
+        height: 44px;
+        width: 53px;
+        color: $red;
+        font-family: Roboto;
+        font-size: 180px;
+        transform: rotate(180deg) translateX(-45px) translateY(-45px);
+      }
+    }
+  }
+}
+
+.stage1_section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+  padding: 100px 0 180px;
+
+  &__stage1 {
+    grid-column-start: 3;
+    margin-bottom: 50px;
+  }
+
+  &__longtext {
+    grid-column-start: 3;
+    grid-column-end: 11;
+    margin-bottom: 60px;
+  }
+
+  &__bialystok {
+    grid-column-start: 3;
+    grid-column-end: 11;
+  }
+}
+
+.section-container__image {
+  width: 100%;
+}
+
+.twofotos__container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+  width: 100%;
+  margin-bottom: 80px;
+
+  &__mozaika {
+    height: 442px;
+    width: 650px;
+    grid-column-start: 1;
+    grid-column-end: 8;
+  }
+
+  &__layer {
+	height: 442px;
+    width: 466px;
+    grid-column-start: 8;
+    grid-column-end: 12;
+  }
+}
+
+.section__container__paralax {
+	width: 100%;
 }
 
 .footer {
-	background-color: #323232;
-	padding: 50px 0;
+  background-color: $blacksecond;
+  padding: 50px 0;
 }
