--- a/style.scss
+++ b/style.scss
@@ -330,16 +330,71 @@ body {
   }
 
   &__layer {
-	height: 442px;
+    height: 442px;
     width: 466px;
     grid-column-start: 8;
     grid-column-end: 12;
   }
 }
 
-.section__container__paralax {
-	width: 100%;
+@mixin define_start($grid_start, $grid_end) {
+  grid-column-start: $grid_start;
+  grid-column-end: $grid_end;
 }
+
+
+  .number {
+    color: $blacksecond;
+    font-family: $roboto;
+    font-size: 100px;
+    font-weight: 100;
+    line-height: 36px;
+    padding: 90px 0 40px;
+  }
+ .empty_shape {
+    height: 1px;
+    width: 180px;
+    opacity: 0.2;
+    background-color: $graysecond;
+  }
+
+  .text {
+    color: $blacksecond;
+    font-family: $monte;
+    font-size: 14px;
+    font-weight: $medium;
+    line-height: 18px;
+    padding: 40px 0 80px;
+  }
+
+
+.numbers_section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 8px;
+  padding-top: 100px;
+
+  &__one {
+    @include define_start(3, 5);
+  }
+
+  &__two {
+    @include define_start(6, 8)
+  }
+
+  &__three {
+    @include define_start(9, 11)
+  }
+}
+
+// parallax
+
+.section__container__paralax {
+  width: 100%;
+}
+
+
+// footer
 
 .footer {
   background-color: $blacksecond;
