Next abstract img fix

--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ body {
   z-index: 100;
   padding: 25px 0;
   grid-template-columns: 51px 188px auto 742px 31px;
-  background: url("images/abstract.jpg") no-repeat;
+  background: url("../images/abstract.jpg") no-repeat;
   background-size: cover;
   top: 0;
   left: 0;
