--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ body {
   margin-bottom: 50px;
 }
 
+.section-container-box {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
 .top_section {
   display: flex;
   flex-direction: column;
