--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,12 @@ body {
   max-width: 1130px;
   margin: 0 auto;
   margin-bottom: 50px;
+  
+}
+
+.section-container-box {
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .top_section {
