--- a/style.css
+++ b/style.css
@@ -68,11 +68,6 @@ body {
   margin-bottom: 50px;
 }
 
-.section-container-box {
-  padding-top: 30px;
-  padding-bottom: 20px;
-}
-
 .top_section {
   display: flex;
   flex-direction: column;
@@ -255,7 +250,7 @@ body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 8px;
-  padding: 100px 0 130px;
+  padding: 50px 0 80px;
 }
 .stage_section__stage {
   grid-column-start: 3;
@@ -274,6 +269,11 @@ body {
   padding-top: 90px;
 }
 
+.big_image {
+  padding-top: 50px;
+  margin-bottom: 10px;
+}
+
 .section-container__image {
   width: 100%;
 }
@@ -283,7 +283,7 @@ body {
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 8px;
   width: 100%;
-  margin-bottom: 80px;
+  margin-bottom: 130px;
 }
 .twofotos__container__mozaika {
   height: 442px;
@@ -293,7 +293,7 @@ body {
 }
 .twofotos__container__layer {
   height: 442px;
-  width: 466px;
+  width: 470px;
   grid-column-start: 8;
   grid-column-end: 12;
 }
@@ -328,7 +328,7 @@ body {
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 8px;
   background-color: #F2F2F2;
-  padding-top: 60px;
+  margin-top: 160px;
 }
 .numbers_section__one {
   grid-column-start: 3;
@@ -345,6 +345,11 @@ body {
 
 .section__container__paralax {
   width: 100%;
+}
+
+.paralax_margin_top {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .footer {
