Fixing rwd in header

--- a/_variables.scss
+++ b/_variables.scss
@@ -22,4 +22,7 @@ $graysecond: #838383;
 
 // media
 
-$layout-breakpoint: 1600px;
+$layout-breakpoint-big: 1600px;
+$layout-break-medium: 1150px;
+$layout-break-tablet: 768px;
+$layout-break-mobile: 668px;
