--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   position: fixed;
   z-index: 100;
   padding: 25px 0;
-  grid-template-columns: 51px 188px auto 742px 31px;
+  grid-template-columns: auto 188px auto 742px auto;
   background: url(images/abstract.jpg) no-repeat;
   background-size: cover;
   top: 0;
@@ -29,7 +29,6 @@ body {
   align-items: center;
 }
 .header .navigation__list {
-  grid-column-start: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -54,14 +53,88 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   font-size: 15px;
-  letter-spacing: 0;
   border: none;
   cursor: pointer;
+  align-self: flex-end;
 }
 .header .navigation__button:hover {
   font-weight: 800;
 }
 
+@media (max-width: 1150px) {
+  .header {
+    grid-template-columns: 188px 742px;
+  }
+
+  .header .navigation {
+    grid-column-start: 2;
+    justify-content: flex-start;
+    width: auto;
+  }
+
+  .header__img {
+    grid-column-start: 1;
+  }
+
+  .navigation {
+    grid-column-start: 2;
+  }
+
+  .header .navigation__list {
+    grid-column-start: 2;
+    justify-content: flex-start;
+    width: auto;
+  }
+
+  .navigation__list__element {
+    margin-right: 10px;
+  }
+}
+@media (max-width: 768px) {
+  .header {
+    grid-template-columns: 188px 742px;
+  }
+
+  .header .navigation {
+    grid-column-start: 2;
+    justify-content: flex-start;
+    width: auto;
+  }
+
+  .header__img {
+    grid-column-start: 1;
+  }
+
+  .navigation {
+    grid-column-start: 2;
+  }
+
+  .header .navigation__list {
+    grid-column-start: 2;
+    justify-content: flex-start;
+    width: auto;
+  }
+
+  .navigation__list__element {
+    margin-right: 5px;
+  }
+
+  .header .navigation__button {
+    width: auto;
+  }
+}
+@media (max-width: 668px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .header .navigation {
+    justify-content: flex-start;
+    width: auto;
+  }
+}
 .section-container {
   max-width: 1130px;
   margin: 0 auto;
