--- a/style.scss
+++ b/style.scss
@@ -81,8 +81,8 @@ body {
 
   .header .navigation{
     grid-column-start: 2;
-    justify-content: flex-start;
-    width: auto;
+    justify-content: center;
+    // width: auto;
   }
   
   .header__img {
@@ -103,9 +103,6 @@ body {
   .navigation__list__element {
     margin-right: 10px;
   }
-
-
-
 }
 
 
@@ -115,7 +112,7 @@ body {
 
   }
 
-  .header .navigation{
+  .header .navigation {
     grid-column-start: 2;
     justify-content: flex-start;
     width: auto;
@@ -132,7 +129,7 @@ body {
 
   .header .navigation__list{
     grid-column-start: 2;
-    justify-content: flex-start;
+    // justify-content: flex-start;
     width: auto;
   }
   
@@ -151,15 +148,20 @@ body {
 @media (max-width: $layout-break-mobile) {
   .header {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+    flex-direction: column
   }
 
   .header .navigation{
-    justify-content: flex-start;
-    width: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
   }
+
+  .navigation__list {
+    padding: 15px 0 15px;
+  }
+  
 
 }
 
@@ -177,47 +179,65 @@ body {
 .top_section {
   display: flex;
   flex-direction: column;
+  // background: url("images/abstract.jpg") no-repeat;
+  //   background-size: cover;
 
   .bcgimage {
-    background: url("/images/abstract.jpg") no-repeat;
+    display: flex;
+    flex-direction: row;
+    background: url("images/abstract.jpg") no-repeat;
     background-size: cover;
+    justify-content: space-around;
+  
+
 
     &__content {
-      display: grid;
-      //width: 100%;
+      // display: grid;
+      // grid-template-columns: auto 760px auto 220px auto;
+      // grid-template-rows: none;
+      // display: flex;
+      // flex-direction: row;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       padding: 0 15px;
       height: 100%;
-      grid-template-columns: auto 760px auto 220px auto;
-      grid-template-rows: 290px 137px 170px 14px 60px;
+      
 
       &__top_text {
-        grid-column-start: 2;
-        grid-row-start: 2;
+        // grid-column-start: 2;
         height: 137px;
         width: 754px;
         font-family: $monte;
         font-weight: $bold;
         font-size: 60px;
+        line-height: 77px;
         letter-spacing: -1px;
-        // margin-top: 50px;
+        padding: 320px 0 170px;
       }
 
       &__ground_text {
-        grid-column-start: 2;
-        grid-row-start: 4;
-        place-self: center;
-        // // margin-top: 130px;
+        // grid-column-start: 2;
+        // justify-self: center;
         font-family: $monte;
         font-size: 14px;
       }
 
       &__image {
-        grid-column-start: 4;
-        grid-row-start: 2;
-        margin-top: -50px;
+        // grid-column-start: 4;
+        // grid-row-start: 1;
+        // margin-top: -50px;
+        padding: 270px 0 200px;
+        height: 225px;
+        width: 225px;
       }
     }
   }
+}
+
+@media (max-width: $layout-break-medium) {
+ 
 }
 
 // main
