--- a/style.scss
+++ b/style.scss
@@ -179,55 +179,47 @@ body {
 .top_section {
   display: flex;
   flex-direction: column;
-  // background: url("images/abstract.jpg") no-repeat;
-  //   background-size: cover;
 
   .bcgimage {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
     background: url("images/abstract.jpg") no-repeat;
     background-size: cover;
-    justify-content: space-around;
   
-
+    &__ground_text_wrapper {
+      display: flex;
+      justify-content: center;
+    }
 
     &__content {
-      // display: grid;
-      // grid-template-columns: auto 760px auto 220px auto;
-      // grid-template-rows: none;
-      // display: flex;
-      // flex-direction: row;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      flex-direction: row;
+      justify-content: space-around;
       padding: 0 15px;
       height: 100%;
       
 
       &__top_text {
-        // grid-column-start: 2;
-        height: 137px;
         width: 754px;
         font-family: $monte;
         font-weight: $bold;
         font-size: 60px;
         line-height: 77px;
         letter-spacing: -1px;
-        padding: 320px 0 170px;
+        padding: 300px 0 170px;
       }
 
+     
+
       &__ground_text {
-        // grid-column-start: 2;
-        // justify-self: center;
         font-family: $monte;
         font-size: 14px;
+        margin-bottom: 60px;
+        margin-left: -30%;
       }
 
       &__image {
-        // grid-column-start: 4;
-        // grid-row-start: 1;
-        // margin-top: -50px;
         padding: 270px 0 200px;
         height: 225px;
         width: 225px;
@@ -237,7 +229,32 @@ body {
 }
 
 @media (max-width: $layout-break-medium) {
- 
+  .top_section  .bcgimage {
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: $layout-break-mobile) {
+
+  .top_section .bcgimage__content__top_text {
+    width: auto;
+    padding: 200px 0 20px 0;
+  }
+  
+  .top_section .bcgimage__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .top_section .bcgimage__content__image {
+    align-self: center;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+  .top_section .bcgimage__content__ground_text {
+    margin-left: 0;
+  }
 }
 
 // main
