--- a/_variables.scss
+++ b/_variables.scss
@@ -26,3 +26,4 @@ $layout-breakpoint-big: 1600px;
 $layout-break-medium: 1150px;
 $layout-break-tablet: 768px;
 $layout-break-mobile: 668px;
+$layout-break-mobile_mini: 468px;
